fix: customize scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,24 @@ p {
   z-index: 10;
 }
 
-/* ----------------------
-      DETAIL PAGE
------------------------- */
+/* -----SCROLLBAR------ */
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #2d2d2d;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #2d2d2d;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
